# CeTTa

./: .gitignore  LICENSE  LIST_BENCHMARK_SOURCES.md  MORK_TUTORIAL.md  Makefile  README.md
bench_results/: petta_parity_20260421T141557Z.csv  petta_parity_20260421T141731Z.csv  petta_parity_20260421T141846Z.csv
benchmarks/: bench_bio_1M.metta  bench_bio_1m_mork_materialize_act.metta  bench_bio_1m_mork_open_act.metta  bench_bio_1m_mork_source.metta  bench_bio_eqtl_mork_import_act.metta  bench_bio_eqtl_mork_open_act.metta  bench_bio_eqtl_mork_source.metta  bench_foldallmatch_he.metta  bench_foldallmatch_petta.metta  bench_foldallspacecount_he.metta  bench_foldallspacecount_petta.metta  bench_metamath_d5.metta  bench_term_sharing_blowup.metta  bench_term_sharing_stress.metta
examples/: advection_demo.metta  advection_trace_roman.metta  bc_curried.metta  bc_impl_equiv.mm2  bc_mammal_lassie.mm2  bc_roman_4node.mm2  bc_socrates_pln.mm2  bench_pure_mm2_3hop_scored.mm2  bench_pure_petta_3hop.metta  counterexample_loom.metta  counterfactual_orchard_pure.mm2  intensional_weighted_ambiguity.metta  intensional_weighted_canary.metta  intensional_weighted_max_demo.metta  lts_he_debugging_showcase.metta  lts_he_reconvergence_showcase.metta  mork_algebra_showcase.metta  mork_mm2_metta_showcase.metta  mork_mm2_showcase.metta  mork_showcase.metta  morkl_mm2_metta_showcase.metta  morkl_showcase.metta  overlap_corrected_revision_demo.metta  ripple_proof_scoring.metta  roman_budget_sweep.metta  roman_query_audit.metta  roman_trace_canary.metta  stamp_collision_ablation.metta  stamp_overlap_sweep.metta
lib/: README_mork.md  clist.metta  cverify_compat.metta  cverify_textual_parse.metta  fs.metta  lib_import.metta  lib_intensional_weighted.metta  lib_overlap_corrected_revision.metta  lib_pln.metta  lib_pln_query_audit.metta  lib_prolog.metta  lib_wmpln.metta  lib_wmpln_evidence.metta  lib_zar.metta  list.metta  list_bench_proto.metta  (+16 more)
rust/: Cargo.toml
rust/cetta-mork-adapter/: Cargo.toml
rust/cetta-mork-adapter/src/: lib.rs
rust/cetta-pathmap-adapter/: Cargo.toml
rust/cetta-pathmap-adapter/src/: lib.rs  overlay_zipper.rs  zipper_ext.rs
rust/cetta-pathmap-adapter/tests/: adapter_smoke.rs
rust/cetta-space/: Cargo.toml
rust/cetta-space-bridge/: Cargo.toml  mm2_bridge_repro.mm2
rust/cetta-space-bridge/include/: mork_space_bridge.h
rust/cetta-space-bridge/src/: counted_pathmap.rs  lib.rs
rust/cetta-space/src/: counted_pathmap.rs  lib.rs
(+1436 files in other folders)
