[workspace]
resolver = "2"
members = [
    "cetta-space",
    "cetta-space-bridge",
    "cetta-pathmap-adapter",
    "cetta-mork-adapter",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
fast-slice-utils = "0.1"
pathmap = { path = "../../PathMap", features = ["jemalloc", "arena_compact", "nightly"] }
mork = { path = "../../MORK/kernel" }
mork-expr = { path = "../../MORK/expr" }
mork-frontend = { path = "../../MORK/frontend" }
mork-interning = { path = "../../MORK/interning" }
cetta-space = { path = "cetta-space" }
cetta-pathmap-adapter = { path = "cetta-pathmap-adapter" }
cetta-mork-adapter = { path = "cetta-mork-adapter" }
