[package]
name = "cetta-space-bridge"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
mork = { workspace = true }
mork-expr = { workspace = true }
mork-frontend = { workspace = true }
pathmap = { workspace = true }
cetta-pathmap-adapter = { workspace = true }
