[package]
name = "cetta-space-bridge"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
default = ["pathmap-space"]
pathmap-space = []

[dependencies]
mork = { workspace = true }
mork-expr = { workspace = true }
mork-frontend = { workspace = true }
pathmap = { workspace = true }
cetta-pathmap-adapter = { workspace = true }
cetta-mork-adapter = { workspace = true, optional = true }
