[package]
name = "cetta-space"
version = "0.1.0"
edition.workspace = true

[features]
default = ["pathmap-space"]
pathmap-space = []

[dependencies]
mork = { workspace = true }
mork-expr = { workspace = true }
mork-frontend = { workspace = true }
mork-interning = { workspace = true }
pathmap = { workspace = true }
